crates/wx-compiler/src/snapshots/wx_compiler__mir__tests__char_lowered_to_u32.snap
---
source: crates/wx-compiler/src/mir.rs
expression: case.mir
---
functions:
  - signature_index: 0
    scopes:
      - kind: Block
        parent: ~
        locals:
          - ty: U32
            mutability: Immutable
        result: U32
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                LocalGet:
                  scope_index: 0
                  local_index: 0
              ty: U32
      ty: U32
signatures:
  - items:
      - U32
      - U32
    params_count: 1
globals: []
exports:
  - Function:
      func_index: 0
      name: 9
imports: []
tuples:
  - fields:
      - StringPointer
      - U32
strings: []
