crates/wx-compiler/src/snapshots/wx_compiler__mir__tests__parse_simple_addition.snap
---
source: crates/wx-compiler/src/mir.rs
expression: case.mir
---
functions:
  - signature_index: 0
    scopes:
      - kind: Block
        parent: ~
        locals:
          - ty: U32
            mutability: Immutable
        result: U32
      - kind: Block
        parent: 0
        locals: []
        result: U32
      - kind: Block
        parent: 0
        locals: []
        result: U32
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                IfElse:
                  condition:
                    kind:
                      And:
                        left:
                          kind:
                            GreaterEq:
                              left:
                                kind:
                                  LocalTupleGet:
                                    scope_index: 0
                                    local_index: 0
                                    field_index: 0
                                ty: U32
                              right:
                                kind:
                                  Int:
                                    value: 97
                                ty: U32
                          ty: Bool
                        right:
                          kind:
                            LessEq:
                              left:
                                kind:
                                  LocalTupleGet:
                                    scope_index: 0
                                    local_index: 0
                                    field_index: 0
                                ty: U32
                              right:
                                kind:
                                  Int:
                                    value: 122
                                ty: U32
                          ty: Bool
                    ty: Bool
                  then_block:
                    kind:
                      Block:
                        scope_index: 1
                        expressions:
                          - kind:
                              StructCreate:
                                fields:
                                  - kind:
                                      Sub:
                                        left:
                                          kind:
                                            LocalTupleGet:
                                              scope_index: 0
                                              local_index: 0
                                              field_index: 0
                                          ty: U32
                                        right:
                                          kind:
                                            Int:
                                              value: 32
                                          ty: U32
                                    ty: U32
                            ty: U32
                    ty: U32
                  else_block:
                    kind:
                      Block:
                        scope_index: 2
                        expressions:
                          - kind:
                              LocalGet:
                                scope_index: 0
                                local_index: 0
                            ty: U32
                    ty: U32
              ty: U32
      ty: U32
  - signature_index: 2
    scopes:
      - kind: Block
        parent: ~
        locals:
          - ty:
              Tuple:
                tuple_index: 1
            mutability: Immutable
          - ty: I32
            mutability: Immutable
        result: Unit
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                LocalSet:
                  scope_index: 0
                  local_index: 0
                  value:
                    kind:
                      String:
                        string_index: 0
                    ty:
                      Tuple:
                        tuple_index: 0
              ty: Unit
            - kind:
                LocalSet:
                  scope_index: 0
                  local_index: 1
                  value:
                    kind:
                      Call:
                        callee:
                          kind:
                            LocalTupleGet:
                              scope_index: 0
                              local_index: 0
                              field_index: 1
                          ty: U32
                        arguments: []
                    ty: I32
              ty: Unit
            - kind:
                Call:
                  callee:
                    kind:
                      Function:
                        func_index: 0
                    ty:
                      Function:
                        signature_index: 1
                  arguments:
                    - kind:
                        Int:
                          value: 0
                      ty: U32
                    - kind:
                        LocalGet:
                          scope_index: 0
                          local_index: 1
                      ty: I32
              ty: Unit
      ty: Unit
signatures:
  - items:
      - U32
      - U32
    params_count: 1
  - items:
      - U32
      - U32
      - Unit
    params_count: 2
  - items:
      - Unit
    params_count: 0
globals: []
exports:
  - Function:
      func_index: 2
      name: 11
imports:
  - name: console
    items:
      - Function:
          name: 10
          func_index: 0
          signature_index: 14
tuples:
  - fields:
      - StringPointer
      - U32
  - fields:
      - U32
      - U32
strings:
  - 20
