crates/wx-compiler/src/snapshots/wx_compiler__mir__tests__size_associated_const.snap
---
source: crates/wx-compiler/src/mir.rs
expression: case.mir
---
functions:
  - signature_index: 3
    scopes:
      - kind: Block
        parent: ~
        locals:
          - ty: U32
            mutability: Immutable
        result: Bool
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                And:
                  left:
                    kind:
                      GreaterEq:
                        left:
                          kind:
                            LocalGet:
                              scope_index: 0
                              local_index: 0
                          ty: U32
                        right:
                          kind:
                            Int:
                              value: 65
                          ty: U32
                    ty: Bool
                  right:
                    kind:
                      LessEq:
                        left:
                          kind:
                            LocalGet:
                              scope_index: 0
                              local_index: 0
                          ty: U32
                        right:
                          kind:
                            Int:
                              value: 90
                          ty: U32
                    ty: Bool
              ty: Bool
      ty: Bool
    inline: true
  - signature_index: 3
    scopes:
      - kind: Block
        parent: ~
        locals:
          - ty: U32
            mutability: Immutable
        result: Bool
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                And:
                  left:
                    kind:
                      GreaterEq:
                        left:
                          kind:
                            LocalGet:
                              scope_index: 0
                              local_index: 0
                          ty: U32
                        right:
                          kind:
                            Int:
                              value: 97
                          ty: U32
                    ty: Bool
                  right:
                    kind:
                      LessEq:
                        left:
                          kind:
                            LocalGet:
                              scope_index: 0
                              local_index: 0
                          ty: U32
                        right:
                          kind:
                            Int:
                              value: 122
                          ty: U32
                    ty: Bool
              ty: Bool
      ty: Bool
    inline: true
  - signature_index: 4
    scopes:
      - kind: Block
        parent: ~
        locals: []
        result: U32
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                Int:
                  value: 4
              ty: U32
      ty: U32
    inline: false
signatures:
  - items:
      - Tuple:
          tuple_index: 0
      - U32
    params_count: 1
  - items:
      - F32
      - F32
    params_count: 1
  - items:
      - U32
      - U32
    params_count: 1
  - items:
      - U32
      - Bool
    params_count: 1
  - items:
      - U32
    params_count: 0
globals: []
exports:
  - Function:
      func_index: 2
      name: 56
imports: []
tuples:
  - fields:
      - I32
strings: []
