crates/wx-compiler/src/snapshots/wx_compiler__mir__tests__string_field_access_lowered_to_local_tuple_get.snap
---
source: crates/wx-compiler/src/mir.rs
expression: case.mir
---
functions:
  - signature_index: 2
    scopes:
      - kind: Block
        parent: ~
        locals:
          - ty:
              Tuple:
                tuple_index: 1
            mutability: Immutable
          - ty: I32
            mutability: Immutable
        result: Unit
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                LocalSet:
                  scope_index: 0
                  local_index: 0
                  value:
                    kind:
                      String:
                        string_index: 0
                    ty:
                      Tuple:
                        tuple_index: 0
              ty: Unit
            - kind:
                LocalSet:
                  scope_index: 0
                  local_index: 1
                  value:
                    kind:
                      Call:
                        callee:
                          kind:
                            LocalTupleGet:
                              scope_index: 0
                              local_index: 0
                              field_index: 1
                          ty: U32
                        arguments: []
                    ty: I32
              ty: Unit
            - kind:
                Call:
                  callee:
                    kind:
                      Function:
                        func_index: 0
                    ty:
                      Function:
                        signature_index: 1
                  arguments:
                    - kind:
                        Int:
                          value: 0
                      ty: U32
                    - kind:
                        LocalGet:
                          scope_index: 0
                          local_index: 1
                      ty: I32
              ty: Unit
      ty: Unit
signatures:
  - items:
      - U32
      - U32
    params_count: 1
  - items:
      - U32
      - U32
      - Unit
    params_count: 2
  - items:
      - Unit
    params_count: 0
globals: []
exports:
  - Function:
      func_index: 1
      name: 11
imports:
  - name: console
    items:
      - Function:
          name: 10
          func_index: 0
          signature_index: 14
tuples:
  - fields:
      - StringPointer
      - U32
  - fields:
      - U32
      - U32
strings:
  - 20
