crates/wx-compiler/src/snapshots/wx_compiler__mir__tests__string_literal_lowered_to_tuple.snap
---
source: crates/wx-compiler/src/mir.rs
expression: case.mir
---
functions:
  - signature_index: 3
    scopes:
      - kind: Block
        parent: ~
        locals:
          - ty: U32
            mutability: Immutable
        result: Bool
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                And:
                  left:
                    kind:
                      GreaterEq:
                        left:
                          kind:
                            LocalGet:
                              scope_index: 0
                              local_index: 0
                          ty: U32
                        right:
                          kind:
                            Int:
                              value: 65
                          ty: U32
                    ty: Bool
                  right:
                    kind:
                      LessEq:
                        left:
                          kind:
                            LocalGet:
                              scope_index: 0
                              local_index: 0
                          ty: U32
                        right:
                          kind:
                            Int:
                              value: 90
                          ty: U32
                    ty: Bool
              ty: Bool
      ty: Bool
    inline: true
  - signature_index: 3
    scopes:
      - kind: Block
        parent: ~
        locals:
          - ty: U32
            mutability: Immutable
        result: Bool
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                And:
                  left:
                    kind:
                      GreaterEq:
                        left:
                          kind:
                            LocalGet:
                              scope_index: 0
                              local_index: 0
                          ty: U32
                        right:
                          kind:
                            Int:
                              value: 97
                          ty: U32
                    ty: Bool
                  right:
                    kind:
                      LessEq:
                        left:
                          kind:
                            LocalGet:
                              scope_index: 0
                              local_index: 0
                          ty: U32
                        right:
                          kind:
                            Int:
                              value: 122
                          ty: U32
                    ty: Bool
              ty: Bool
      ty: Bool
    inline: true
  - signature_index: 5
    scopes:
      - kind: Block
        parent: ~
        locals:
          - ty:
              Tuple:
                tuple_index: 0
            mutability: Immutable
        result: Unit
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                LocalSet:
                  scope_index: 0
                  local_index: 0
                  value:
                    kind:
                      Packed:
                        fields:
                          - kind:
                              StringIndex:
                                string_index: 0
                            ty: Pointer
                          - kind:
                              Int:
                                value: 5
                            ty: U32
                    ty:
                      Tuple:
                        tuple_index: 0
              ty: Unit
      ty: Unit
    inline: false
signatures:
  - items:
      - Tuple:
          tuple_index: 0
      - U32
    params_count: 1
  - items:
      - F32
      - F32
    params_count: 1
  - items:
      - U32
      - U32
    params_count: 1
  - items:
      - U32
      - Bool
    params_count: 1
  - items:
      - U32
      - U32
      - Unit
    params_count: 2
  - items:
      - Unit
    params_count: 0
globals: []
exports:
  - Function:
      func_index: 3
      name: 59
imports:
  - name: console
    items:
      - Function:
          name: 57
          func_index: 0
          signature_index: 22
tuples:
  - fields:
      - I32
strings:
  - 67
