crates/wx-compiler/src/snapshots/wx_compiler__mir__tests__struct_field_access_lowered_to_local_tuple_get.snap
---
source: crates/wx-compiler/src/mir.rs
expression: case.mir
---
functions:
  - signature_index: 1
    scopes:
      - kind: Block
        parent: ~
        locals:
          - ty:
              Tuple:
                tuple_index: 1
            mutability: Immutable
        result: U32
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                LocalTupleGet:
                  scope_index: 0
                  local_index: 0
                  field_index: 0
              ty: U32
      ty: U32
signatures:
  - items:
      - U32
      - U32
    params_count: 1
  - items:
      - Tuple:
          tuple_index: 1
      - U32
    params_count: 1
globals: []
exports:
  - Function:
      func_index: 0
      name: 12
imports: []
tuples:
  - fields:
      - StringPointer
      - U32
  - fields:
      - U32
      - U32
strings: []
